--- a/app/templates/instances/detail.html
+++ b/app/templates/instances/detail.html
@@ -279,7 +279,7 @@
                                 <td>
                                     <div class="d-flex align-items-center">
                                         <i class="fas fa-user text-primary me-2"></i>
-                                        <strong>{{ account.username }}@{{ account.instance.host if account.instance else '%' }}</strong>
+                                        <strong>{{ account.username }}@{{ account.host }}</strong>
                                     </div>
                                 </td>
                                 <td>
