--- a/app/templates/instances/detail.html
+++ b/app/templates/instances/detail.html
@@ -279,7 +279,11 @@
                                 <td>
                                     <div class="d-flex align-items-center">
                                         <i class="fas fa-user text-primary me-2"></i>
-                                        <strong>{{ account.username }}@{{ account.host }}</strong>
+                                        {% if account.username and '@' in account.username %}
+                                            <strong>{{ account.username }}</strong>
+                                        {% else %}
+                                            <strong>{{ account.username }}@{{ account.host }}</strong>
+                                        {% endif %}
                                     </div>
                                 </td>
                                 <td>
